apps/wordpress-jzl/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: wordpress-jzl-redis
 namespace: wordpress-jzl
spec:
 ports:
 - port: 6379
 selector:
   app: wordpress-jzl-redis
